# dnalang-production

./: .env.example  .env.local.template  .gitignore  .vercelignore  ADMIN_USER_SETUP.md  AIDEN_V2.2.0_DEPLOYMENT_SUMMARY.md  AIDEN_V2.2.0_SYSTEM_DOCUMENTATION.md  ARENA_DEPLOYMENT_COMPLETE.md  AURA_ARENA_STATUS.md  AURA_INTEGRATION.md  AURA_NLP2_QUICKSTART.md  AURA_NLP2_SWARM_GUIDE.md  BACKEND_SETUP_GUIDE.md  COMPLETE_PACKAGE_SUMMARY.md  COMPLETE_SYSTEM_INTEGRATION.md  CONSOLIDATION_PLAN.md  CURRENT_STATUS.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_GENERATION_4.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_UPDATE.md  DEPLOYMENT_STATUS_VERCEL.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_COMPLETE.sh  DNALANG_4_MONTH_SCIENTIFIC_ANALYSIS.md  DOMAIN_INTEGRATION_GUIDE.md  DOMAIN_SETUP_GUIDE.md  DOMAIN_TRANSFER_INSTRUCTIONS.md  DUAL_TRACK_ARCHITECTURE.md  DUAL_TRACK_STATUS.md  ENHANCED_CHAT_DEPLOYMENT.md  ENHANCED_USER_SYSTEM.md  ENTERPRISE_PLATFORM_ARCHITECTURE.md  ENTERPRISE_PLATFORM_DEPLOYMENT_COMPLETE.md  (+68 more)
aiden_organisms/: aiden_research_001.dna
api/: README.md
api/arena/: events.ts  session.ts
api/auth/: profile.ts
api/quantum/: jobs.ts
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/arena/: page.tsx  page.tsx.backup
app/aura/: page.tsx
app/aura-ultimate/: page.tsx
app/benchmarks/: page.tsx
app/chat/: page.tsx
app/feed/: page.tsx
app/leaderboard/: page.tsx
app/nfts/: page.tsx
app/orchestrator/: page.tsx
app/workloads/: page.tsx
aura_organisms/: aura_research_001.dna
backend/: .env.template  Dockerfile  aura_memory_indexer.py  docker-compose.yml  main.py  requirements.txt
billing/: README.md  requirements.txt
blockchain/: hardhat.config.js
cli/: .env.example  .gitignore  .npmignore  CHANGELOG.md  INSTALLATION.md  LICENSE  README.md  package-lock.json  package.json
components/: consciousness-monitor.tsx  ibm-quantum-logo.tsx  metric-card.tsx  navigation.tsx  quantum-visualization.tsx  theme-toggle.tsx  wallet-connect-modal.tsx
database/: README.md  connection.py  docker-compose.yml
desktop/: package.json
docs/: DNALANG_INTEGRATION.md
fhir/: requirements.txt
iam/: README.md  docker-compose.yml
ibm-cloud-integration/: README.md
integrations/: INTEGRATION_GUIDE.md  __init__.py  api.py  master_integration.py  quantum_integrations.py  quantumcoin_integration.py  quantumcomm_integration.py  requirements.txt  web_platform_integration.py  z3bra_bridge_integration.py
lib/: dnalang-client.ts  organism-bridge.ts
python/: requirements.txt
quantum_aura_orchestrator/: .pre-commit-config.yaml  README.md  VQE_SMOKE_TEST_DELIVERY.md  pyproject.toml  pytest.ini  quantum_vqe_executor.py  requirements.txt
quantum_aura_orchestrator/.github/workflows/: provenance-check.yml  quantum-vqe-ci.yml
quantum_aura_orchestrator/tests/: __init__.py
quantum_aura_orchestrator/tests/fixtures/: h2_hamiltonian.py
quantum_aura_orchestrator/tests/integration/: test_vqe_smoke.py
scripts/: README.md  create_admin_user.py
supabase/: schema.sql
workers/: README.md  aura_worker.py  requirements.txt
(+124 files in other folders)
